Fix T92733: Error moving a completely locked bone